Fix up some simple cases.
Adds a 'general use' .full-width class, intended to be for form-fields etc, to prevent getting too wide

--- a/public_html/templates/resp/css/modification.css
+++ b/public_html/templates/resp/css/modification.css
@@ -52,6 +52,11 @@ input#search_toggle, label#search_label {
 	right:20px;
 }
 
+.full-width {
+	box-sizing:border-box;
+	max-width:100%;
+}
+
 /* styling for a 66% resized photo*/
 div.photo66
 {
